Adicionando tela Menu Gerente

--- a/BancoEletronico/TelaInicial/TelaInicial.csproj
+++ b/BancoEletronico/TelaInicial/TelaInicial.csproj
@@ -59,6 +59,10 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="LoginGerente.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -69,6 +73,9 @@
     </Compile>
     <Compile Include="LoginCliente.xaml.cs">
       <DependentUpon>LoginCliente.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="LoginGerente.xaml.cs">
+      <DependentUpon>LoginGerente.xaml</DependentUpon>
     </Compile>
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
