Cadastro de endereço e cliente

--- a/BancoEletronico/TelaInicial/TelaInicial.csproj
+++ b/BancoEletronico/TelaInicial/TelaInicial.csproj
@@ -187,6 +187,16 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Controllers\Controllers.csproj">
+      <Project>{9d9aeb04-a80c-4123-afb6-f19f32a14ec9}</Project>
+      <Name>Controllers</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\Models\Models.csproj">
+      <Project>{037b5e5f-a9ee-4856-8395-bac175249269}</Project>
+      <Name>Models</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
