Alterando controllers para Banco de Dados

--- a/BancoEletronico/Controllers/Controllers.csproj
+++ b/BancoEletronico/Controllers/Controllers.csproj
@@ -53,6 +53,7 @@
     <Compile Include="ClienteController.cs" />
     <Compile Include="ContaCController.cs" />
     <Compile Include="ContaPController.cs" />
+    <Compile Include="ContextoSingleton.cs" />
     <Compile Include="EnderecosController.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
